Restored all the tests and matched closely the regular daemon code.